---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 30. 11. 2024
  Bugfixes:
    - Fixed wrong offset for Kuxynator's Slim-Inserters

---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 30. 11. 2024
  Graphics:
    - Added thumbnail

---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 30. 11. 2024
  Major Features:
    - Added inserter blacklists for direction and length changes
    - Support for Kuxynator's Slim-Inserters
  Changes:
    - Rewritten most of the code
    - Changed the mod's name
  Locale:
    - Fixed some typos

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 26. 11. 2024
  Minor Features:
    - Added a sound for changing settings
    - Added a notification for changing settings using keybinds

  Bugfixes:
    - Fixed a crash related to using keybinds outside inserters
    - Fixed incorrect keybind

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 26. 11. 2024
  Major Features:
    - Initial release.