@@ -3,6 +3,7 @@ Version: 2.0.2
 Date: 30. 11. 2024
   Bugfixes:
     - Fixed wrong offset for Kuxynator's Slim-Inserters
+    - Fixed Long-Handed Inserter's recipe being hidden even if the setting was disabled [Doesn't affect Long Slim Inserter being always hidden]
 
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.1
